"Grid Floor Scaling" can have some unexpected behaviour on new objects #36537

Closed
opened 2013-08-22 15:25:04 +02:00 by Jonas Weiss · 10 comments

%%%--- Operating System, Graphics card ---
OS: Windows 7
Graphics Card: Amd Radeon HD 6850
Processor: Intel(R) Core 2 Duo E8500 @ 3.16GHz

- Blender version with error, and version that worked ---

Not working:
Blender 2.68a
r58926

Working:
dont know

- Short description of error ---

Grid floor scale and unit scale have some unexpected behavior on newly added objects. New objects with a grid floor scaling of 0.1 can have a scale aspect of 1:100 instead of 1:10 compared to a grid floor scale of 1.0
And it can happen that new objects are 1:100 with grid scale 1.0 as well

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  1. Remove all objects from the scene
  2. Set Blender Units to "Metric"
  3. Add a Cube (It will have Dimensions: 2m)
  4. Add a Bezier Curve (It will have Dimensions: x: 2m)
  5. Set Grid Floor Scaling to Scale: 0.01
  6. Add another Cube (It will have Dimensions: 2m)
  7. Add another Bezier Curve (It will have Dimensions x:0.2mm) !

%%%

%%%--- Operating System, Graphics card --- OS: Windows 7 Graphics Card: Amd Radeon HD 6850 Processor: Intel(R) Core 2 Duo E8500 @ 3.16GHz - Blender version with error, and version that worked --- Not working: Blender 2.68a r58926 Working: dont know - Short description of error --- Grid floor scale and unit scale have some unexpected behavior on newly added objects. New objects with a grid floor scaling of 0.1 can have a scale aspect of 1:100 instead of 1:10 compared to a grid floor scale of 1.0 And it can happen that new objects are 1:100 with grid scale 1.0 as well - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1. Remove all objects from the scene 2. Set Blender Units to "Metric" 3. Add a Cube (It will have Dimensions: 2m) 4. Add a Bezier Curve (It will have Dimensions: x: 2m) 5. Set Grid Floor Scaling to Scale: 0.01 6. Add another Cube (It will have Dimensions: 2m) 7. Add another Bezier Curve (It will have Dimensions x:0.2mm) ! %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%I'm going to mark this as a duplicate of this report:
https://projects.blender.org/tracker/index.php?func=detail&aid=36307&group_id=9&atid=498

There seems to be a lot of confusion around scale of added objects and grids/units...%%%

%%%I'm going to mark this as a duplicate of this report: https://projects.blender.org/tracker/index.php?func=detail&aid=36307&group_id=9&atid=498 There seems to be a lot of confusion around scale of added objects and grids/units...%%%
Member

%%%maybe this is about confusion but i tested this as well and would say theres some scaling factor that should not happen at all, when changing a multiplier from 1 to 0.1 i would expect the units to behave like that and not scale from 1 to 0.001.%%%

%%%maybe this is about confusion but i tested this as well and would say theres some scaling factor that should not happen at all, when changing a multiplier from 1 to 0.1 i would expect the units to behave like that and not scale from 1 to 0.001.%%%

%%%fixed r60157.%%%

%%%fixed r60157.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

%%%i still get the problem with r60379 so maybe you could have an other look at this issue. thanks%%%

%%%i still get the problem with r60379 so maybe you could have an other look at this issue. thanks%%%
Member

%%%sorry the main issue is fixed, can you test the behavior of objec scale with something else than a cube? the grid floor scaling behaves differently for a cube thqan for every other object and i dont think grid floor scal should have influence on a object.%%%

%%%sorry the main issue is fixed, can you test the behavior of objec scale with something else than a cube? the grid floor scaling behaves differently for a cube thqan for every other object and i dont think grid floor scal should have influence on a object.%%%

%%%Cubes are handled in the same way as other objects, if there is still some problem - please give exact steps to redo.%%%

%%%Cubes are handled in the same way as other objects, if there is still some problem - please give exact steps to redo.%%%
Member

%%%ok here are the steps for the scaling issue i described:

  1. set grid floor scale to 0.1
  2. create a cube
  3. create any other object
  4. now set the grid floor scale to 1.0
  5. creeate that cube again, note it has the same scale as cube from step 2
  6. create that other object again and note the scale is different
    %%%
%%%ok here are the steps for the scaling issue i described: 1. set grid floor scale to 0.1 2. create a cube 3. create any other object 4. now set the grid floor scale to 1.0 5. creeate that cube again, note it has the same scale as cube from step 2 6. create that other object again and note the scale is different %%%
Author

%%%Bug is not fixed in r60379

Maybe this only happens with Bezier Curves.

Steps to reproduce:

  1. Remove all objects from the scene
  2. Set Blender Units to "Metric"
  3. Add a Cube (It will have Dimensions: 2m)
  4. Add a Bezier Curve (It will have Dimensions: x: 2m)
  5. Set Grid Floor Scaling to Scale: 0.01
  6. Add another Cube (It will have Dimensions: 2m)
  7. Add another Bezier Curve (It will have Dimensions x:0.2mm) <--- error!%%%
%%%Bug is not fixed in r60379 Maybe this only happens with Bezier Curves. Steps to reproduce: 1. Remove all objects from the scene 2. Set Blender Units to "Metric" 3. Add a Cube (It will have Dimensions: 2m) 4. Add a Bezier Curve (It will have Dimensions: x: 2m) 5. Set Grid Floor Scaling to Scale: 0.01 6. Add another Cube (It will have Dimensions: 2m) 7. Add another Bezier Curve (It will have Dimensions x:0.2mm) <--- error!%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36537
No description provided.