fix [#36537] "Grid Floor Scaling" can have some unexpected behaviour on new objects

curves and metaballs now behave the same as meshes wrt grid scaling.
remove WM_operator_view3d_distance_invoke(), and replace with a function called from exec which initializes defaults, this way operators can have their own invoke functions.